# BehaviorTreeSolver

./: .gitignore  CMakeLists.txt  README.md  README.txt  Version.txt  autoCMake.sh  autoCMake.txt  linux_install.txt  runBenchmarks.py
benchmarks/: .~lock.Tsppd-summary.csv#  Ctwp-summary.csv  Jsp-summary.csv  Mosp-summary.csv  Tsppd-summary.csv  common.py  commonMdd.py  commonMinizinc.py  plotBenchmarks.py  run_mdd_all.sh  run_mdd_cpu-gpu.sh  run_mdd_cpu-only.sh  summaryBenchmarks.py
benchmarks/CTW/: A031.json  A047.json  R014.dot  R020.json  R085.dot  R085S.json  R194.json  ctw.mzn  ctw_benchmarking-solvers_result-summary.xlsx  dat2dot.py  dat2json.py
benchmarks/Ctwp/: Mz2.mzn  README.md  benchmarksCommon.py  benchmarksMinizinc.py  ctwp-ortools-1618688571.csv  ctwp-ortools-30-16-1619284360.csv  ctwp-ortools-45-16-1619281580.csv  ctwp-ortools-60-16-1619288284.csv  ctwp-yuck-30-16-1619312588.csv  ctwp-yuck-45-16-1619303824.csv  instances.py  runBenchmarks.py
benchmarks/JSP/: README.md  benchmarksCommon.py  benchmarksOrTools.py  benchmarksParser.py  jobshop.mzn  or-tools.py
benchmarks/Jsp/: README.md  benchmarksCommon.py  benchmarksMdd.py  benchmarksOrTools.py  instances.py  jobshop.mzn  jsp-ortools-15-16-1619650206.csv  jsp-ortools-1618701477.csv  jsp-ortools-30-16-1619491058.csv  jsp-ortools-45-16-1619485997.csv  jsp-ortools-60-16-1619479477.csv  mddJsp.py  ortoolsJsp.py  runBenchmarks.py
benchmarks/MOSP/: dzn2json.py
benchmarks/Mosp/: README.md  benchmarksCommon.py  benchmarksMinizinc.py  instances.py  mosp-ortools-15-16-1619398335.csv  mosp-ortools-1618692464.csv  mosp-ortools-30-16-1619397802.csv  mosp-ortools-45-16-1619397049.csv  mosp-ortools-60-16-1619396105.csv  mosp-yuck-15-16-1619381269.csv  mosp-yuck-30-16-1619379750.csv  mosp-yuck-45-16-1619377480.csv  mosp-yuck-60-16-1619374460.csv  runBenchmarks.py
benchmarks/TSPPD/: VrpBenchmarksMDD-1609210558.csv  benchmarksMDD.py  benchmarksOrTools.py
benchmarks/Tsppd/: README.md  benchmarksCommon.py  benchmarksOrTools.py  instances.py  ortoolsTsppd.py  runAllBenchmarks.sh  runBenchmarks.py  tsppd-ortools-15-1-1619741998.csv  tsppd-ortools-1618711577.csv  tsppd-ortools-30-1-1619736477.csv  tsppd-ortools-45-1-1619728196.csv  tsppd-ortools-60-1-1619717155.csv
benchmarks/VRP/: VrpBenchmarksMDD-1609548457.csv  VrpBenchmarksMDD-1612245816.csv  VrpBenchmarksOrTools-1609221656.csv  VrpBenchmarksOrTools-1609528594.csv  benchmarksCommon.py  benchmarksMDD.py  plotBenchmarks.py  vrpOrTools.py
benchmarks/results/: ctwp_mdd_cpu-gpu_60_60.csv  ctwp_mdd_cpu-only_60_60.csv  ctwp_mzn_gecode-lns_60_60.csv  ctwp_mzn_gecode-original_60_60.csv  ctwp_mzn_yuck-original_60_60.csv  ossp_mdd_cpu-gpu_60_60.csv  ossp_mdd_cpu-only_60_60.csv  ossp_mzn_gecode-lns_60_60.csv  ossp_mzn_gecode-original_60_60.csv  ossp_mzn_yuck-original_60_60.csv  sop_mdd_cpu-gpu_60_60.csv  sop_mdd_cpu-only_60_60.csv  sop_mzn_gecode-lns_60_60.csv  sop_mzn_gecode-original_60_60.csv  sop_mzn_yuck-original_60_60.csv
bt_protobuf/: CMakeLists.txt
cmake/modules/: AddCXXFlagMacros.cmake  BasicSetup.cmake  BasicTestSetup.cmake  BoostFinder.cmake  ColorMessage.cmake  ComponentsPackageFind.cmake  FindBoost.cmake  FindGecode.cmake  FindORTools.cmake  FindProtocolBuffer.cmake  FindSCIP.cmake  FindSSL.cmake  FindSoplex.cmake  FindZeroMQ.cmake  MainSrcFinder.cmake  OfficialGtestSetup.cmake  PackageMacros.cmake  SimplePackageFind.cmake  StandardGtestSetup.cmake  StandardTestingSetup.cmake
cpp/bt/: behavior.cpp  behavior.hpp  behavior_tree.cpp  behavior_tree.hpp  behavior_tree_arena.cpp  behavior_tree_arena.hpp  blackboard.cpp  blackboard.hpp  branch.cpp  branch.hpp  cp_node.hpp  edge.cpp  edge.hpp  node.cpp  node.hpp  node_status.cpp  node_status.hpp  opt_node.cpp  opt_node.hpp  std_node.hpp
cpp/bt_client/: bt_client.cpp
cpp/bt_optimization/: all_different.cpp  all_different.hpp  bt_solver.cpp  bt_solver.hpp  dp_model.cpp  dp_model.hpp
cpp/bt_solver/: all_different.cpp  all_different.hpp  bt_solver.cpp  bt_solver.hpp  engine.cpp  engine.hpp
cpp/cp/: bitmap_domain.cpp  bitmap_domain.hpp  bt_constraint.cpp  bt_constraint.hpp  constraint.cpp  constraint.hpp  domain.hpp  model.cpp  model.hpp  opt_constraint.cpp  opt_constraint.hpp  variable.cpp  variable.hpp
cpp/data_structures/: int_set.cpp  int_set.hpp
cpp/mdd/: edge.cpp  edge.hpp  mdd  mdd.cpp  mdd.hpp  node  node.cpp  node.hpp  problem.cpp  problem.hpp  test.out  test_mdd  test_mdd.cpp  variable  variable.cpp  variable.hpp
cpp/mdd_client/: mdd_client.cpp
cpp/mdd_optimization/: all_different.cpp  all_different.hpp  among.cpp  among.hpp  arena.hpp  constraint.cpp  constraint.hpp  dp_model.cpp  dp_model.hpp  edge.cpp  edge.hpp  equality.cpp  equality.hpp  job_shop.cpp  job_shop.hpp  mdd.cpp  mdd.hpp  mdd_compiler.hpp  mdd_constraint.cpp  mdd_constraint.hpp  mdd_optimizer.cpp  mdd_optimizer.hpp  mdd_problem.cpp  mdd_problem.hpp  node.cpp  node.hpp  node_domain.cpp  node_domain.hpp  td_compiler.cpp  td_compiler.hpp  td_optimizer.cpp  td_optimizer.hpp  top_down_compiler.cpp  top_down_compiler.hpp  top_down_mdd.cpp  top_down_mdd.hpp  tsppd.cpp  tsppd.hpp  variable.cpp  variable.hpp
cpp/mdd_test/: test.json
cpp/system/: dll_export.hpp  system_export_defs.hpp
cpp/tools/: timer.cpp  timer.hpp
include/Containers/: Array.cuh  BitArray.cuh  BitSet.cuh  Buffer.cuh  CircularBuffer.cuh  LightArray.cuh  LightVector.cuh  ManualVector.cuh  MaxHeap.cuh  MinHeap.cuh  RuntimeArray.cuh  StaticMaxHeap.cuh  StaticSet.cuh  StaticVector.cuh  Vector.cuh
include/CustomTemplateLibrary/: CTL.hh  RuntimeArray.hh  StaticVector.hh  Vector.hh
include/DP/: AllDifferent.hh  State.hh
include/Extra/: Algorithms.hh  Containers.hh  Extra.hh  Utils.hh
include/MDD/: DAG.hh  Edge.cuh  Edge.hh  Layer.hh  MDD.cuh  MDD.hh  Node.hh
include/Problem/: AllDifferent.cuh  AllDifferent.hh  DPModel.cuh  State.hh  Variable.cuh  Variable.hh
src/: Main.cc  Main.cu  Main.cx  Neighbourhood.cuh  OffloadBuffer.cuh  Options.h  main.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/bt/: bt_test.cpp  edge_test.cpp  node_test.cpp
(+2027 files in other folders)
